ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.http.routers.router1.middlewares: "default-ratelimit@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
  - host: sport01.tianma-trial.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: sport01-service
            port:
              number: 10180
