ingress/sport-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sport-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: "default-ratelimit@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.tianma-trial.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argocd-server
            port:
              number: 80
  - host: sport01.tianma-trial.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: sport01-service
            port:
              number: 10180
  - host: sport02.tianma-trial.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: sport02-service
            port:
              number: 10180
